# ai-engineering-fundamentals

./: README.md  code_quality.md  spec.md
simopsbot_course_repo/: .gitignore  README.md  pyproject.toml  report.md  spec.md
simopsbot_course_repo/book/: 01_agents_evidence_budgets.md  02_genai_contracts_validation.md  03_uncertainty_hypotheses.md  04_reliability_verification_idempotency.md  05_security_untrusted_inputs_policy.md  06_evaluation_specs_suites_gates.md  README.md
simopsbot_course_repo/labs/: README.md  meeting1.md  meeting2.md  meeting3.md  meeting4.md  meeting5.md  meeting6.md
simopsbot_course_repo/learning_compiler/: __init__.py  types.py
simopsbot_course_repo/learning_compiler/agent/: __init__.py  actions.py  executor.py  hypotheses.py  loop.py  orchestration.py  policy.py  state.py  tools_wrapped.py  validator.py  verifier.py
simopsbot_course_repo/learning_compiler/agent/deciders/: __init__.py  base.py  llm_based.py  rule_based.py
simopsbot_course_repo/learning_compiler/eval/: __init__.py  gate.py  metrics.py  runner.py  scenario_generator.py
simopsbot_course_repo/learning_compiler/journal/: __init__.py  models.py  reader.py  writer.py
simopsbot_course_repo/learning_compiler/llm/: __init__.py  adapter.py  fake_model.py
simopsbot_course_repo/learning_compiler/sim/: __init__.py  faults.py  observations.py  redteam.py  runbooks.py  scenario.py  tools.py  world.py
simopsbot_course_repo/learning_compiler/utils/: hashing.py  json.py
simopsbot_course_repo/scripts/: eval_runner.py  print_journal.py  redteam_cases_generate.py  run_scenario.py
simopsbot_course_repo/tests/: conftest.py  test_core.py
v1/ai-from-zero-courierbot/: .gitignore  README.md  mypy.ini  pyproject.toml
v1/ai-from-zero-courierbot/book/: 00-course-overview.md  01-agent-loop-evidence.md  04-learning-behavior-cloning.md  05-reliability-primitives.md  appendix.md
v1/ai-from-zero-courierbot/learning_compiler/agent/: __init__.py  actions.py  interface.py  lab3.py  serialization.py
v1/ai-from-zero-courierbot/learning_compiler/core/: hashing.py
v1/ai-from-zero-courierbot/learning_compiler/env/: __init__.py  grid.py  types.py
v1/ai-from-zero-courierbot/learning_compiler/evaluation/: harness.py
v1/ai-from-zero-courierbot/learning_compiler/journal/: models.py  replay.py  writer.py
v1/ai-from-zero-courierbot/learning_compiler/learning/: __init__.py  dataset.py  knn.py
v1/ai-from-zero-courierbot/learning_compiler/orchestration/: __init__.py  stages.py
v1/ai-from-zero-courierbot/learning_compiler/planning/: __init__.py
v1/ai-from-zero-courierbot/learning_compiler/tools/: __init__.py  faults.py  simulator.py  wrappers.py
v1/ai-from-zero-courierbot/scripts/: run_lab5.py
v1/ai-from-zero-courierbot/tests/: test_planning.py
v1/learning-compiler-course/: .gitignore  LICENSE  README.md  pyproject.toml
v1/learning-compiler-course/.github/workflows/: ci.yml
v1/learning-compiler-course/docs/book/: 00_preface.md  01_meeting1_big_map.md  02_meeting2_search_planning.md  (+5 more)
v1/learning-compiler-course/learning_compiler/: __init__.py  cli.py  config.py
v1/learning-compiler-course/scripts/: lc.py
v1/learning-compiler-course/tests/: test_bayes.py  test_idempotency.py  test_journal_hash.py  test_q_learning.py  test_search.py
(+78 files in other folders)
