[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-from-zero-courierbot"
version = "0.1.0"
description = "CourierBot: a 6x1h agentic systems lab spine (AI From Zero, Feb 2026)."
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "MIT"}
authors = [{name = "Course Staff"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy==1.10.0",
  "ruff==0.5.7",
  "pytest==8.2.0",
  "pytest-cov==5.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["learning_compiler*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line-length is handled by formatter / review preference

[tool.ruff.lint.isort]
known-first-party = ["learning_compiler"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
